// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should render correctly with children as a component 1`] = `
<section
  className="stncl__description"
>
  <p>
    'I am just a basic description component'
  </p>
</section>
`;

exports[`it should render correctly with children as a string 1`] = `
<section
  className="stncl__description"
>
  I am just a basic description
</section>
`;

exports[`it should render null with no children 1`] = `null`;
